// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render and match the snapshot 1`] = `
<div
  className="Card__wrapper null"
>
  <div
    className="Card"
  >
    <div
      className="Card__imagewrapper"
    >
      <img
        className="Card__image"
      />
    </div>
    <div
      className="Card__title"
    />
    <div
      className="Card__footer"
    >
      <div>
        <ForwardRef(SvgStarCommentAlt)
          className="Card__ratingicon"
        />
         
         (
        
        )
      </div>
      <div
        className="Card__rating"
      >
        <span
          className="Card__ratinglabel"
        >
          Rating : 
        </span>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render and match the snapshot given detail prop 1`] = `
<div
  className="Card__wrapper null"
>
  <div
    className="Card"
  >
    <div
      className="Card__imagewrapper"
    >
      <img
        className="Card__image"
        src="https://cdn.myanimelist.net/images/anime/4/19644.webp"
      />
    </div>
    <div
      className="Card__title"
    >
      Cowboy Bebop
    </div>
    <div
      className="Card__footer"
    >
      <div>
        <ForwardRef(SvgStarCommentAlt)
          className="Card__ratingicon"
        />
         
        1.5
         (
        12,345
        )
      </div>
      <div
        className="Card__rating"
      >
        <span
          className="Card__ratinglabel"
        >
          Rating : 
        </span>
         
        PG-13 - Teens 13 or older
      </div>
    </div>
  </div>
</div>
`;
